--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,30 @@
 .notification {
   width: 20%;
+  margin: auto;
+  margin-top: 2rem;
 }
 
 .title {
   color: yellow;
+}
+
+img {
+  width: 25%;
+}
+
+.date {
+  color: #aaaaa7;
+}
+
+.xcentered {
+  display: block;
+  margin: auto;
+}
+
+#movie-list {
+  margin-top: 5rem;
+}
+
+.loading {
+  width: 100%;
 }
