--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,15 @@
   color: yellow;
 }
 
+.movie-title {
+  color: #23b1ac;
+  font-size: 1.5rem;
+}
+
+.subtitle {
+  font-size: 1rem;
+}
+
 img {
   width: 25%;
 }
